# cursor_agent_cli_patch

./: .gitignore  API.md  MANIFEST.in  README.md  cursor_agent_api.py  patch-cursor-agent  pyproject.toml  requirements.txt  test_acceptance.py  test_api.py  test_unit.py
cursor_agent_api/: __init__.py  client.py  patch.py
examples/: async_usage.py  basic_usage.py  tool_monitoring.py
